# pet-time-tracker

./: .gitignore  README.md
backend/: .env.example  pet_tracker.db  pyproject.toml
backend/app/: main.py
backend/app/api/: activities.py  auth.py  pets.py  report.py  stats.py
backend/app/auth/: security.py
backend/app/models/: entities.py
backend/app/schemas/: activity.py  auth.py  pet.py  stats.py
backend/app/services/: report.py  stats.py
backend/app/utils/: db.py  settings.py
backend/pet_time_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Mascot.tsx  QuickActions.tsx
frontend/src/lib/: supabase.ts
frontend/src/pages/: Activities.tsx  Auth.tsx  Dashboard.tsx  Home.tsx  PetSetup.tsx
frontend/src/pwa/: sw-register.ts  sw.ts
frontend/src/store/: activities.ts  auth.ts  pets.ts  stats.ts
frontend/src/utils/: date.ts  extract.test.ts  extract.ts
